# honeybook-gallery

./: .gitignore  Makefile  PLAN.md  README.md  docker-compose.yml  openapi.yaml  task.md
.github/workflows/: ci.yml
ai-testing/: README.md
ai-testing/persona_suite/: __init__.py  __main__.py  client.py  deterministic.py  llm.py  personas.py  report.py  runner.py  world.py
ai-testing/tests/: test_persona_suite.py
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/app/: auth.py  cli.py  db.py  errors.py  images.py  main.py  models.py  schemas.py  seed.py
backend/app/routes/: __init__.py  auth.py  gallery.py
backend/tests/: conftest.py  test_api.py  test_auth_internals.py  test_cli.py  test_contract_fuzz.py  test_contract_openapi.py  test_property.py  test_static_seed.py  test_time.py
frontend/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
frontend/src/: styles.css
frontend/src/api/: client.ts
frontend/src/components/: GalleryGrid.vue  OtpEntry.vue
frontend/src/composables/: useSession.ts
frontend/src/router/: index.ts
frontend/src/types/: api.ts
frontend/src/views/: GalleryView.vue  HomeView.vue
frontend/tests/: setup.ts
frontend/tests/e2e/: flow.spec.ts
frontend/tests/unit/: GalleryGrid.test.ts  GalleryView.test.ts  OtpEntry.test.ts  client.test.ts  useSession.test.ts
