[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "honeybook-backend"
version = "0.1.0"
description = "Honeybook gallery mock backend (Session A)."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy>=2.0",
    "pydantic>=2.5",
    "pillow>=10.0",
    "httpx>=0.27",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "freezegun>=1.5",
    "jsonschema>=4.21",
    "pyyaml>=6.0",
    "schemathesis>=3.27",
    "ruff>=0.6",
    "mypy>=1.10",
    "types-jsonschema>=4.21",
    "types-pyyaml>=6.0",
]
# Optional: powers the *live* mode of the AI persona suite. Offline mode needs
# none of this.
ai = [
    "anthropic>=0.40",
]

[project.scripts]
honeybook = "app.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --cov=app --cov-report=term-missing --cov-report=xml"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]

[tool.coverage.report]
show_missing = true
fail_under = 90

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
# `_utcnow`/`_ensure_naive_utc` are deliberately underscored shared helpers.
ignore = ["B008"]  # FastAPI uses function calls (Depends/Header) in defaults.

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
warn_unused_ignores = true
warn_redundant_casts = true
disallow_untyped_defs = false
ignore_missing_imports = true
